Ganesh Project/src/objects/Order_Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HiR_ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HiR ProductId</label>
        <referenceTo>HiR_Product__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Order Product</label>
    <nameField>
        <label>Order Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>